<resources>
    <string name="app_name">Skincareku</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_up_now">Sign Up Now</string>
    <string name="recovery_password">Recovery Password</string>
    <string name="create_account">Create Account</string>
    <string name="name">Name</string>
    <string name="already_have_an_account">Already have an account?</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="insert_name">Name can\'t be empty</string>
    <string name="insert_email">Email can\'t be empty</string>
    <string name="insert_password">Password can\'t be empty</string>
    <string name="insert_confirm_password">Password confirmation can\'t be empty</string>
    <string name="password_not_match">Password confirmation doesn\'t match</string>
    <string name="invalid_email">Email that you input is invalid</string>
    <string name="password_length">Password at least 6 character</string>

    <string name="login_error">Username or Password incorrect</string>
    <string name="no_internet">No Internet</string>
    <string name="connection_error">Please check your connection</string>
    <string name="retry">Retry</string>
    <string name="email_taken">This email already registered</string>
    <string name="success_register">Your account has been created, let\'s login now</string>
    <string name="login_now">Login Now</string>
    <string name="success_register_title">Register Successfully</string>
    <string name="date">Date</string>
    <string name="birthdate">Birthdate</string>
    <string name="gender">Gender</string>
    <string name="save">Save</string>
    <string name="next">Next</string>
    <string name="tv_skin_problem">What is your skin problem now?</string>
    <string name="acne">Acne</string>
    <string name="dry_skin">Dry Skin</string>
    <string name="submit">Submit</string>
    <string name="the_information_in_this_page_will_used_for_your_product_and_article_recommendation">The information in this page will used for your product and article recommendation</string>
    <string name="complete_profile">Last step to finish your registration</string>
    <string name="oily_skin">Oily Skin</string>
    <string name="birthdate_error">Birth Date can\'t be empty</string>
    <string name="gender_error">Gender can\'t be empty</string>
    <string name="please_select_your_skin_problem">Please select your skin problem</string>
    <string name="most_recommendation">Most Recommendation</string>
    <string name="hello">Hi, Henry</string>
    <string name="acids">Acids</string>
    <string name="essential_oils">Essential Oils</string>
    <string name="sulfates">Sulfates</string>
    <string name="your_information">Your Information</string>
    <string name="change_profile">Change Profile</string>
    <string name="logout">Logout</string>
    <string name="assesments_test">Assesments Test</string>

    <string name="place_holder">Place Holder</string>
    <string name="load_image">Load Image</string>
    <string name="take_image">Take Image</string>
    <string name="output">Output:</string>
    <string name="comedo">Comedo</string>
    <string name="skin_analysis">Its look like there is %s in your face, here are some recommended products that may help improve your condition : </string>
    <string name="dummy">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
    <string name="confirm">Confirm</string>

    <string name="search">Search</string>

    <string name="ok">OK</string>
    <string name="yes">Yes</string>
    <string name="cancel">Cancel</string>
    <string name="getup_title">Get Up</string>
    <string name="cleanser_title">Cleanser</string>
    <string name="toner_title">Toner</string>
    <string name="serum_title">Serum</string>
    <string name="moisturizer_title">Moisturizer</string>
    <string name="sleep_title">Sleep</string>
    <string name="getup_description">Get up and start your day with a fresh face</string>
    <string name="cleanser_description">Cleanse your face with a gentle cleanser</string>
    <string name="toner_description">Tone your face with a toner</string>
    <string name="serum_description">Apply serum to your face</string>
    <string name="moisturizer_description">Moisturize your face</string>
    <string name="sleep_description">Sleep and let your skin rest</string>

    <string name="buying_recommended_product">Do you want to buy the product that we suggest?</string>

</resources>